syntax = "proto3";

package NAlice.NScenarios.NGalleryArgs;

option java_package = "ru.yandex.kronstadt.alice.scenarios.tv_main.proto";
option java_multiple_files = true;

import "alice/protos/data/tv/tags/catalog_tag.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TVideoGetGallerySceneArgs {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    int32 Offset = 2 [json_name = "offset", (NYT.column_name) = "offset"];
    int32 Limit = 3 [json_name = "limit", (NYT.column_name) = "limit"];
    string CacheHash = 4 [json_name = "cache_hash", (NYT.column_name) = "cache_hash"];
    string FromScreenId = 5 [json_name = "from_screen_id", (NYT.column_name) = "from_screen_id"];
    string ParentFromScreenId = 6 [json_name = "parent_from_screen_id", (NYT.column_name) = "parent_from_screen_id"];
    bool KidModeEnabled = 7 [json_name = "kid_mode_enabled", (NYT.column_name) = "kid_mode_enabled"];
    string RestrictionAge = 8 [json_name = "restriction_age", (NYT.column_name) = "restriction_age"];
    int32 CarouselPosition = 9 [json_name = "carousel_position", (NYT.column_name) = "carousel_position"];
    string CarouselTitle = 10 [json_name = "carousel_title", (NYT.column_name) = "carousel_title"];
    repeated NAlice.NTv.TCatalogTag SelectedTags = 11 [json_name = "selected_tags", (NYT.column_name) = "selected_tags"];
}
